Thu Dec 25 14:51:43 2008  NAKAMURA Usaku  <usa@ruby-lang.org>

	* lib/rdoc/parser.rb (RDoc::Parser.binary?): should read in binary mode.

Thu Dec 25 14:32:23 2008  Koichi Sasada  <ko1@atdot.net>

	* vm_insnhelper.c (vm_method_search): fix control flow bug.
	  (commited at r20981)

Thu Dec 25 13:28:20 2008  NAKAMURA Usaku  <usa@ruby-lang.org>

	* io.c (rb_io_flush): fsync() after buffer is flushed on win32.
	  [ruby-core:20043]

Thu Dec 25 13:13:00 2008  Koichi Sasada  <ko1@atdot.net>

	* vm_insnhelper.c (vm_method_search): return rb_cObject if there is no
	  super class.  [ruby-dev:37587]

	* bootstraptest/test_method.rb: add tests for above.

Thu Dec 25 12:49:12 2008  Koichi Sasada  <ko1@atdot.net>

	* proc.c (proc_new): should use proc_dup() if block has Proc.

	* vm.c (vm_make_proc_from_block): should use rb_cProc for block.

	* vm.c (vm_make_proc): add an assertion.

	* bootstraptest/test_proc.rb: add a test.

Thu Dec 25 12:44:27 2008  Koichi Sasada  <ko1@atdot.net>

	* vm_insnhelper.c (vm_yield_with_cfunc): check block has Proc.

Thu Dec 25 05:53:01 2008  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* template/id.h.tmpl, id.h (ruby_method_ids): not depend on if
	  token are defined as macros.  [ruby-dev:37553]

	* template/id.h.tmpl, id.h (ruby_method_ids_check): enclosed in a
	  struct.

Thu Dec 25 01:52:34 2008  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* thread.c (thread_start_func_2): sets native thread key.

Thu Dec 25 01:09:23 2008  TAKAO Kouji  <kouji@takao7.net>

	* test/readline/test_readline_history.rb: check the encoding that
	  is in the Readline::HISTORY.

Thu Dec 25 00:59:06 2008  TAKAO Kouji  <kouji@takao7.net>

	* test/readline/test_readline_history.rb: did not check the
	  encoding that is in the Readline::HISTORY. I will fix it.

Wed Dec 24 22:36:06 2008  Koichi Sasada  <ko1@atdot.net>

	* error.c, vm_dump.c: change message by rb_bug().

Wed Dec 24 21:57:39 2008  Koichi Sasada  <ko1@atdot.net>

	* compile.c (iseq_peephole_optimize): fix typo.
