@@ -1,3 +1,7 @@
+Thu Dec 25 15:07:22 2008  Tanaka Akira  <akr@fsij.org>
+
+	* io.c (fptr_finalize): close the IO object even if close(2) is failed.
+
 Thu Dec 25 14:51:43 2008  NAKAMURA Usaku  <usa@ruby-lang.org>
 
 	* lib/rdoc/parser.rb (RDoc::Parser.binary?): should read in binary mode.
